# unit_10

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp
core/: CMakeLists.txt  core.cpp
core2/: CMakeLists.txt
core2/include/: core.hpp
server/: CMakeLists.txt  server.cpp
